...
        }
        item { SectionHeader(stringResource(R.string.comparison_categories)) }
        items(
            items = comparison.categories,
            key = { it.categoryId.stableId },
        ) { category ->
            Box(modifier = Modifier.testTag("comparison_category")) {
                ComparisonCategorySection(
                    category = category,
                    isExpanded = expandedCategory == category.categoryId.stableId,
                    onClick = {
                        expandedCategory =
                            category.categoryId.stableId.takeUnless { it == expandedCategory }
...
